3DGRUT default
